# learn

./: .gitignore
ansible/: README.txt  ansible.cfg  collections.txt
ansible/playbooks/: certbot_standalone.yml  create_swap.yml  create_tmpfs.yml  create_user_with_plaintext_password.yml  disable_ssh_root_password_login.yml  download_and_unarchive.yml  install_apt_from_custom_repo.yml  install_docker.yml  replace_text_file_content.yml
bitcoin/: README.txt
css/missing/: README.txt  basics.html  dropdown.html  forms.html  test.html  wide-table.html
css/pico/: README.txt  basics.html  dropdown.html  forms.html  test.html  wide-table.html
css/simple/: README.txt  basics.html  dropdown.html  forms.html  test.html  wide-table.html
css/tacit/: README.txt  basics.html  dropdown.html  forms.html  justfile  test.html  wide-table.html
just/: .env.example  README.txt  justfile
mongodb/: README.txt
mongodb/queries/: distinct.js  find_older_or_null.js  query_with_current_time_and_other_field.js  schema_validation.js  sort_by_date_null_first.js  test.js
postgresql/: README.txt
postgresql/sql/: basics.sql  insert_on_confict_do_nothing.sql  list_of_dict.sql  not_in_array.sql  nulls_first.sql
python/playground/fastapi-response-objectid/: justfile  main.py  pyproject.toml
python/pypi/bip_utils/: README.txt
python/pypi/bit/: .env.example  README.txt  send_tx.py
python/pypi/bitcoinlib/: README.txt  requirements.txt
rust/: README.txt  apps.txt
rust/crates/alloy/: Cargo.toml  README.txt
rust/crates/axum/examples/access-token/: Cargo.toml  justfile
rust/crates/axum/examples/access-token/src/: main.rs
rust/crates/axum/examples/access-token/templates/: index.html  login.html
rust/crates/axum/examples/access-token/templates/inc/: base.html
rust/crates/axum/examples/base-crate/app/: Cargo.toml
rust/crates/axum/examples/base-crate/app/src/: lib.rs
rust/crates/axum/examples/base-crate/app/src/templates/: p1.html
rust/crates/mongodb/: .gitignore  Cargo.toml  README.txt  justfile  rustfmt.toml
rust/crates/reqwest/download-large-file/: Cargo.toml
rust/crates/reqwest/download-large-file/src/: main.rs
rust/std/: Cargo.toml
shadowsocks/: linux.sh
surrealdb/: README.txt
xray/: README.txt
(+95 files in other folders)
