[package]
name = "learn-alloy"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full", "node-bindings", "signers", "signer-local", "signer-mnemonic"] }
eyre = "0.6.12"
tokio = { version = "1.38.1", features = ["full"] }
reqwest = "0.12.5"
dotenv = "0.15.0"
rand = "0.8.5"
