[package]
name = "learn-mongodb"
version = "0.1.0"
edition = "2021"


[dependencies]
mongodb = { version = "3.0.1" }
bson = { version = "2.11.0", features = ["serde_with-3", "chrono-0_4"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_json_path = "0.6.7"
serde_with = "3.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.1", features = ["full"] }
futures = "0.3.30"
