[package]
name = "download-large-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.3", features = ["stream"] }
tokio = { version = "1.37.0", features = ["full"] }
