[package]
name = "axum-access-token"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["form"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
minijinja = { version = "2.1.0", features = ["loader"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
