[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
minijinja-embed = "2.1.1"
minijinja = "2.1.1"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
anyhow = "1.0.86"

base = { path = "../base" }


[build-dependencies]
minijinja-embed = "2.1.1"

